update update update

--- a/swiper/demos/10-slides-per-column.html
+++ b/swiper/demos/10-slides-per-column.html
@@ -29,7 +29,7 @@
         font-size: 18px;
         background: #fff;
         height: 200px;
-        
+
         /* Center slide text vertically */
         display: -webkit-box;
         display: -ms-flexbox;
@@ -66,14 +66,14 @@
     </div>
 
     <!-- Swiper JS -->
-    <script src="../dist/js/swiper.min.js"></script>
+    <script src="../dist/js/swiper.js"></script>
 
     <!-- Initialize Swiper -->
     <script>
     var swiper = new Swiper('.swiper-container', {
         pagination: '.swiper-pagination',
-        slidesPerView: 3,
-        slidesPerColumn: 2,
+        slidesPerView: 2,
+        slidesPerColumn: 3,
         paginationClickable: true,
         spaceBetween: 30
     });
