--- a/swiper/demos/13-scrollbar.html
+++ b/swiper/demos/13-scrollbar.html
@@ -65,7 +65,7 @@
     </div>
 
     <!-- Swiper JS -->
-    <script src="../dist/js/swiper.min.js"></script>
+    <script src="../dist/js/swiper.js"></script>
 
     <!-- Initialize Swiper -->
     <script>
