update update update

--- a/swiper/demos/01-default.html
+++ b/swiper/demos/01-default.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
     <title>Swiper demo</title>
     <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="../dist/css/swiper.min.css">
@@ -60,7 +61,8 @@
     </div>
 
     <!-- Swiper JS -->
-    <script src="../dist/js/swiper.js"></script>
+    <script src="../dist/js/zepto.min.js"></script>
+    <script src="../dist/js/swiper.zepto.js"></script>
 
     <!-- Initialize Swiper -->
     <script>
