--- a/swiper/demos/13-scrollbar.html
+++ b/swiper/demos/13-scrollbar.html
@@ -65,7 +65,8 @@
     </div>
 
     <!-- Swiper JS -->
-    <script src="../dist/js/swiper.js"></script>
+    <script src="../dist/js/zepto.min.js"></script>
+    <script src="../dist/js/swiper.zepto.js"></script>
 
     <!-- Initialize Swiper -->
     <script>
@@ -75,7 +76,8 @@
         slidesPerView: 'auto',
         centeredSlides: true,
         spaceBetween: 30,
-        grabCursor: true
+        grabCursor: true,
+        watchSlidesProgress: true
     });
     </script>
 </body>
