--- a/swiper/demos/15-infinite-loop.html
+++ b/swiper/demos/15-infinite-loop.html
@@ -72,7 +72,8 @@
     </div>
 
     <!-- Swiper JS -->
-    <script src="../dist/js/swiper.min.js"></script>
+    <script src="../dist/js/zepto.min.js"></script>
+    <script src="../dist/js/swiper.zepto.js"></script>
 
     <!-- Initialize Swiper -->
     <script>
