--- a/swiper/demos/02-responsive.html
+++ b/swiper/demos/02-responsive.html
@@ -67,7 +67,8 @@
     </div>
 
     <!-- Swiper JS -->
-    <script src="../dist/js/swiper.min.js"></script>
+    <script src="../dist/js/zepto.min.js"></script>
+    <script src="../dist/js/swiper.zepto.js"></script>
 
     <!-- Initialize Swiper -->
     <script>
