--- a/swiper/demos/38-history.html
+++ b/swiper/demos/38-history.html
@@ -44,7 +44,8 @@
         line-height: 300px;
     }
     </style>
-    <script src="../dist/js/swiper.min.js"></script>
+    <script src="../dist/js/zepto.min.js"></script>
+    <script src="../dist/js/swiper.zepto.js"></script>
     <script>
         var swiper = new Swiper('.swiper-container', {
             spaceBetween: 50,
