--- a/swiper/demos/30-lazy-load-images.html
+++ b/swiper/demos/30-lazy-load-images.html
@@ -30,7 +30,7 @@
         text-align: center;
         font-size: 18px;
         background: #000;
-        
+
     }
     .swiper-slide img {
       width: auto;
@@ -77,7 +77,7 @@
                 <img data-src="http://lorempixel.com/1600/1200/nature/6" class="swiper-lazy">
                 <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
             </div>
-            
+
         </div>
         <!-- Add Pagination -->
         <div class="swiper-pagination swiper-pagination-white"></div>
@@ -87,7 +87,8 @@
     </div>
 
     <!-- Swiper JS -->
-    <script src="../dist/js/swiper.min.js"></script>
+    <script src="../dist/js/zepto.min.js"></script>
+    <script src="../dist/js/swiper.zepto.js"></script>
 
     <!-- Initialize Swiper -->
     <script>
